--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,5 @@ data/*.zip
 log/**
 checkpoints/**
 patchs/crop1024/**
-src/__pycache__/*
-src/dataloader/__pycache__/*
+src/__pycache__/**
+src/dataloader/__pycache__/**
